# poo

./: .gitignore  README.md
assets/: bonus.md  proiect.md
bonus/: bonus.py
bonus/web/: pubspec.yaml
bonus/web/ios/: firebase_app_id_file.json
bonus/web/lib/: firebase_options.dart  main.dart
bonus/web/macos/: firebase_app_id_file.json
labs/L01/: README.md
labs/L02/: README.md  fractie.cpp
labs/L02/example/: CMakeLists.txt  main.cpp
labs/L03/: cerinta.txt
labs/L03/1/: README.md  main.cpp
labs/L03/1/src/: carte.cpp  (+3 more)
labs/L03/2/: CMakeLists.txt  main.cpp
labs/L03/example/: CMakeLists.txt  main.cpp
labs/L03/example/include/: adresa.h  apartament.h  bloc.h  bloc_repository.h  menu.h  scara.h
labs/L03/example/src/: adresa.cpp  apartament.cpp  bloc.cpp  bloc_repository.cpp  menu.cpp  scara.cpp
labs/L04/: README.md
labs/L04/example/: CMakeLists.txt  main.cpp
labs/L04/example/include/: angajat.h  angajat_permanent.h  angajat_temporar.h  data.h  menu.h
labs/L04/example/src/: angajat.cpp  angajat_permanent.cpp  angajat_temporar.cpp  menu.cpp
labs/L05/: L05_1.cpp  README.md
labs/L05/example/: CMakeLists.txt  main.cpp
labs/L05/example/include/: angajat.h  cnp.h  displayable.h  judet.h  menu.h  persoana.h  readable.h  student.h  student_angajat.h
labs/L05/example/src/: angajat.cpp  cnp.cpp  menu.cpp  persoana.cpp  student.cpp
labs/L06/: README.md
labs/L07/: README.md
labs/L08/: README.md
labs/L11/: README.md
labs/L12/: README.md
proiect/P01/: README.md
proiect/P03/: README.md
proiect/P03/oop-template/: CMakeLists.txt  main.cpp
(+20 files in other folders)
